+ -> Addition
^ -> Change
- -> Removed
! -> Note

02-Sep-2010 Andrew Eddie
 # Fixed issue [#22210] module latest users (Bill Richardson).
 # Fixed issue [#22211] module - latest news - typo error (Bill Richardson).
 # Fixed issue [#22169] After selecting cannot set -use default- (Klas Berlič1, Ian MacLennan).
 # Fixed issue [#22052] sample data menu capitalisation (Brian Teeman, Tim Plummer).

01-Sep-2010 Andrew Eddie (and Happy 5th Birthday Joomla!)
 # Fixed issue [#22118] The setRedirect method() overwrites an already set messageType (Roland Dalmulder, Artyom Bisyarin).
 # Fixed issue [#21604] The "Memory Usage" debug info has no measurement unit (Javier Gómez, Nikolai Plath, Omar Ramos).
 # Fixed issue [#21862] Backend menu components are not ordered alphabetically (Hannes Papenberg).
 # Fixed issue [#21879] Speed improvement for Beez tempalte's use of html5.js (Rouven Weßling).
 # Fixed issue [#22037] Module manager - varies only (Brian Teeman, Bill Richardson).
 # Fixed issue [#21880] Relocate Database Prefix Portion of Database Configuration Installer Screen (Matt Thomas).
 # Fixed issue [#20427] Media Manager: impossible to upload image in the specific folder chosen (Jean-Marie Simonet, Hannes Papenberg).

31-Aug-2010 Jean-Marie Simonet
 # [#22150] hathor menu type - unable to select type. Thanks Bill.
 # [#22161] edit article - show icons and + param missing 
 # [#21932] checkall-toggle does not work with Hathor template on User Manager: Users screen. Thanks Andrea.
 # [#20920] Featured Button Missing on Front End Article Submission. Thanks Hannes.
 $ Reordered front-end en-GB.ini strings
 $ Modified publish/unpublish to enable/disable in Extension Manager->Manage toolbars
 $ [#22156] edit weblink - order description missing. Thanks Bill.
 $ [#22152] permissions edit terms inconsistency. Thanks Bill.
 
30-Aug-2010 Jean-Marie Simonet
 # [#22050] useful joomla links menu. Thanks Bill.
 # [#22046] cannot unblock users. Thanks Michael and Dennis.
