@@ -21,4 +21,6 @@ COM_WEBLINKS_NAME="Name"
 COM_WEBLINKS_NO_WEBLINKS="There are no Web links in this category"
 COM_WEBLINKS_NUM="# of links:"
 COM_WEBLINKS_WEB_LINKS="Web links"
+COM_WEBLINKS_WEBLINK_SAVE_SUCCESS="Web link successfully saved"
 JGLOBAL_NEWITEMSLAST_DESC="New Web links default to the last position. Ordering can be changed after this Web link has been saved."
+COM_WEBLINKS_ERR_TABLES_NAME="There is already a Web Link with that name in this category. Please try again."
